@@ -29,6 +29,7 @@ import static io.wcm.handler.media.testcontext.DummyMediaFormats.HOME_STAGE;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.List;
+import java.util.Map;
 
 import javax.servlet.http.HttpServletResponse;
 
@@ -44,8 +45,6 @@ import org.osgi.framework.Constants;
 import org.skyscreamer.jsonassert.JSONAssert;
 
 import com.day.cq.dam.api.Asset;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 
 import io.wcm.handler.media.Media;
 import io.wcm.handler.media.MediaInvalidReason;
@@ -74,11 +73,11 @@ class MediaFormatValidateServletTest {
   @SuppressWarnings("null")
   void testValid() throws Exception {
     Asset asset = context.create().asset("/content/dam/sample.jpg",
-        (int)EDITORIAL_1COL.getWidth(),
-        (int)EDITORIAL_1COL.getHeight(),
+        EDITORIAL_1COL.getWidth(),
+        EDITORIAL_1COL.getHeight(),
         ContentType.JPEG);
 
-    context.request().setParameterMap(ImmutableMap.of(
+    context.request().setParameterMap(Map.of(
         RP_MEDIA_FORMATS, EDITORIAL_1COL.getName(),
         RP_MEDIA_REF, asset.getPath()));
     underTest.service(context.request(), context.response());
@@ -89,11 +88,11 @@ class MediaFormatValidateServletTest {
   @Test
   void testValid_MultipleFormats() throws Exception {
     Asset asset = context.create().asset("/content/dam/sample.jpg",
-        (int)EDITORIAL_1COL.getWidth(),
-        (int)EDITORIAL_1COL.getHeight(),
+        EDITORIAL_1COL.getWidth(),
+        EDITORIAL_1COL.getHeight(),
         ContentType.JPEG);
 
-    context.request().setParameterMap(ImmutableMap.of(
+    context.request().setParameterMap(Map.of(
         RP_MEDIA_FORMATS, HOME_STAGE.getName() + "," + EDITORIAL_1COL.getName(),
         RP_MEDIA_FORMATS_MANDATORY, HOME_STAGE.getName() + "," + EDITORIAL_1COL.getName(),
         RP_MEDIA_REF, asset.getPath()));
@@ -108,11 +107,11 @@ class MediaFormatValidateServletTest {
   @SuppressWarnings("null")
   void testValid_MultipleFormats_Optional() throws Exception {
     Asset asset = context.create().asset("/content/dam/sample.jpg",
-        (int)EDITORIAL_1COL.getWidth(),
-        (int)EDITORIAL_1COL.getHeight(),
+        EDITORIAL_1COL.getWidth(),
+        EDITORIAL_1COL.getHeight(),
         ContentType.JPEG);
 
-    context.request().setParameterMap(ImmutableMap.of(
+    context.request().setParameterMap(Map.of(
         RP_MEDIA_FORMATS, HOME_STAGE.getName() + "," + EDITORIAL_1COL.getName(),
         RP_MEDIA_FORMATS_MANDATORY, EDITORIAL_1COL.getName(),
         RP_MEDIA_REF, asset.getPath()));
@@ -129,7 +128,7 @@ class MediaFormatValidateServletTest {
         10,
         ContentType.JPEG);
 
-    context.request().setParameterMap(ImmutableMap.of(
+    context.request().setParameterMap(Map.of(
         RP_MEDIA_FORMATS, EDITORIAL_1COL.getName(),
         RP_MEDIA_REF, asset.getPath()));
     underTest.service(context.request(), context.response());
@@ -145,16 +144,16 @@ class MediaFormatValidateServletTest {
     context.registerService(MediaHandlerConfig.class, new DummyMediaHandlerConfig() {
       @Override
       public @NotNull List<Class<? extends MediaProcessor>> getPreProcessors() {
-        return ImmutableList.of(AllInvalidMediaPreProcessor.class);
+        return List.of(AllInvalidMediaPreProcessor.class);
       }
     }, Constants.SERVICE_RANKING, 1000);
 
     Asset asset = context.create().asset("/content/dam/sample.jpg",
-        (int)EDITORIAL_1COL.getWidth(),
-        (int)EDITORIAL_1COL.getHeight(),
+        EDITORIAL_1COL.getWidth(),
+        EDITORIAL_1COL.getHeight(),
         ContentType.JPEG);
 
-    context.request().setParameterMap(ImmutableMap.of(
+    context.request().setParameterMap(Map.of(
         RP_MEDIA_FORMATS, EDITORIAL_1COL.getName(),
         RP_MEDIA_REF, asset.getPath()));
     underTest.service(context.request(), context.response());
